# crtsys

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build_all.bat  vcruntime.props
cmake/: CPM.cmake  CrtSys.cmake  FindWDK.cmake  crtsys-config.cmake.in  pkg-utils.cmake  std-cxx.cmake
docs/: architecture.md  ci-driver-load-tests.md  (+14 more)
examples/kmdf-wmi-ntl-driver/: CMakeLists.txt  README.md  crtsys_kmdf_wmi_ntl_sample.inf  crtsys_kmdf_wmi_ntl_sample.mof  crtsys_kmdf_wmi_ntl_sample.vcxproj  crtsys_kmdf_wmi_ntl_sample_vs.sln  install.ps1
examples/kmdf-wmi-ntl-driver/driver/: main.cpp
examples/kmdf/pnp/: CMakeLists.txt  README.md  crtsys_kmdf_pnp_ntl_sample.inf  crtsys_kmdf_pnp_ntl_sample_app.vcxproj  crtsys_kmdf_pnp_ntl_sample_vs.sln  install.ps1  remove.ps1
examples/kmdf/pnp/driver/: main.cpp
examples/minifilter/basic/: CMakeLists.txt  README.md  crtsys_minifilter_basic_sample.vcxproj  crtsys_minifilter_basic_sample_app.vcxproj  crtsys_minifilter_basic_sample_vs.sln
examples/minifilter/basic/app/: main.cpp
examples/minifilter/basic/driver/: crtsys_minifilter_basic_sample.inf  main.cpp
examples/minifilter/basic/shared/: basic_sample.hpp
examples/minifilter/swap-buffers/: CMakeLists.txt  README.md  crtsys_minifilter_swap_buffers_sample.vcxproj  crtsys_minifilter_swap_buffers_sample_app.vcxproj  crtsys_minifilter_swap_buffers_sample_vs.sln
examples/minifilter/swap-buffers/app/: main.cpp
examples/minifilter/swap-buffers/driver/: crtsys_minifilter_swap_buffers_sample.inf  main.cpp  xor_filter.cpp  xor_filter.hpp
examples/minifilter/swap-buffers/shared/: swap_buffers_sample.hpp
examples/ntl-rpc-driver/: CMakeLists.txt  README.md  crtsys_ntl_rpc_sample.vcxproj  crtsys_ntl_rpc_sample_app.vcxproj  crtsys_ntl_rpc_sample_vs.sln
examples/ntl-rpc-driver/app/: asynchronous_call.cpp  caller_security.cpp  cancellation.cpp  coroutine_call.cpp  coroutine_task.hpp  examples.hpp  main.cpp  reliable_notifications.cpp  stop_token_cancellation.cpp  streaming.cpp  streaming_batch.cpp  synchronous_calls.cpp
examples/ntl-rpc-driver/driver/: caller_security.cpp  caller_security.hpp  main.cpp  notifications.cpp  notifications.hpp  operations.cpp  operations.hpp
examples/ntl-rpc-driver/shared/: ntl_rpc_caller_security.hpp  ntl_rpc_sample.hpp  ntl_rpc_sample_types.hpp
examples/ntl-rpc-driver/src/: main.cpp
test/: CMakeLists.txt  build.bat
test/app/: CMakeLists.txt
test/app/src/: main.cpp
test/cmake/: build.bat
test/cmake/app/: CMakeLists.txt
test/cmake/app/src/: main.cpp  rpc_coroutine.cpp
test/cmake/common/: multi_instance.h  rpc.hpp  test_device.h
test/cmake/driver/: CMakeLists.txt
test/cmake/driver/multi_instance/: driver.cpp  probe.cpp
test/cmake/driver/src/: all.cpp  main.cpp  ntl.cpp
test/cmake/driver/src/c/: math.c
test/cmake/driver/src/cpp/lang/: exceptions.cpp  initialization.cpp  rtti.cpp
test/cmake/driver/src/cpp/stl/: algorithm.cpp  atomic.cpp  chrono.cpp  containers.cpp  cstdio.cpp  cstdio_file_state.cpp  cstdlib.cpp  ctime.cpp  cxx_latest.cpp  diagnostics.cpp  exception.cpp  filesystem.cpp  functional.cpp  locale.cpp  memory.cpp  nls.cpp  numeric.cpp  regex.cpp  streams.cpp  string.cpp  thread.cpp  utility.cpp
test/cmake/driver/src/libs/: nlohmann_json.cpp
test/cmake/install-consumer/: CMakeLists.txt
test/cmake/install-consumer/src/: main.cpp
test/common/: rpc.hpp  test_device.h
test/common/rpc/: client.hpp  declare.hpp  procedures.cpp  server.hpp
test/driver/: CMakeLists.txt
test/driver/src/: all.cpp  main.cpp  ntl.cpp
test/driver/src/cpp/lang/: initialization.cpp
test/flt/: README.md
test/flt/compile/: context.cpp  instance.cpp  operation_callback.cpp
test/flt/cross-bitness/: CMakeLists.txt
test/flt/runtime/: CMakeLists.txt  IO-BUFFER-README.md  README.md
test/flt/runtime/app/: communication_advanced.cpp  communication_advanced.hpp  coroutine_runtime.cpp  coroutine_runtime.hpp  main.cpp  security_probe.cpp
test/flt/runtime/driver/: communication_advanced.cpp  communication_advanced.hpp  crtsys_flt_runtime_test.inf  main.cpp
test/flt/runtime/io_buffer_app/: main.cpp
test/flt/runtime/io_buffer_driver/: crtsys_flt_io_buffer_runtime_test.inf  main.cpp
test/flt/runtime/io_buffer_shared/: io_buffer_runtime.hpp
test/flt/runtime/shared/: runtime_test.hpp
test/flt/verifier-stress/: CMakeLists.txt  README.md
test/flt/verifier-stress/app/: main.cpp
test/kmdf/: README.md
test/kmdf/verifier-stress/: CMakeLists.txt  README.md
test/kmdf/verifier-stress/app/: main.cpp
test/kmdf/verifier-stress/driver/: main.cpp
test/kmdf/verifier-stress/shared/: ioctl.hpp
test/nuget/: README.md  crtsys_nuget_app_test.vcxproj  crtsys_nuget_test.vcxproj
test/nuget/gtest/: gtest.h
test/rpc/async/: CMakeLists.txt  README.md
test/rpc/async/app/: main.cpp
test/rpc/async/driver/: main.cpp
test/rpc/async/shared/: rpc_async.hpp
test/rpc/cross-bitness/: CMakeLists.txt  README.md
test/rpc/cross-bitness/app/: main.cpp
test/rpc/cross-bitness/driver/: main.cpp
test/rpc/cross-bitness/shared/: rpc_cross_bitness.hpp
test/rpc/lifecycle-stress/: CMakeLists.txt  README.md
test/rpc/lifecycle-stress/app/: main.cpp
test/rpc/lifecycle-stress/driver/: main.cpp
test/rpc/lifecycle-stress/shared/: rpc_lifecycle_stress.hpp
test/rpc/notifications/: CMakeLists.txt  README.md
test/rpc/notifications/app/: main.cpp
test/rpc/notifications/driver/: main.cpp
test/rpc/notifications/shared/: rpc_notifications.hpp
test/rpc/security/: CMakeLists.txt  README.md
test/rpc/security/app/: main.cpp
test/rpc/security/driver/: main.cpp
test/rpc/security/shared/: rpc_security.hpp
test/rpc/streaming/: CMakeLists.txt  README.md
test/rpc/streaming/app/: main.cpp
test/rpc/streaming/driver/: main.cpp
test/rpc/streaming/shared/: rpc_streaming.hpp  rpc_streaming_macros.hpp
test/src/: all.cpp  main.cpp  math_test.cpp  ntl.cpp  ntl_test.cpp  std_test.cpp  test.cpp  test.h
test/src/c/: math.c
test/src/cpp/lang/: exceptions.cpp  initialization.cpp
test/src/cpp/stl/: chrono.cpp  thread.cpp
(+429 files in other folders)
